--- a/dev/styles/partials/_results.scss
+++ b/dev/styles/partials/_results.scss
@@ -153,7 +153,6 @@
 }
 
 
-
 .drink-image:hover + .more-info{
     display: block;
 }
@@ -176,14 +175,91 @@
 }
 
 
+.additional-drink-info,
+.additional-movie-info {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #565656;
+    color: white;
+    font-size: 2rem;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .fa-times {
+        font-size: 4rem;
+        color: $accentFontColor;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        cursor: pointer;
+    }
+}
+
 .additional-drink-info {
     display: none;
+    height: 200%;
+
+    h3 {
+        font-size: 2.6rem;
+    }
+
+    .ingredients-container {
+        display: flex;
+        justify-content: center;
+        margin: 30px 0;
+
+        .measurement-list {
+            margin-right: 15px;
+            color: $accentFontColor;
+        }
+
+        li {
+            font-weight: 700;
+            // font-size: 1.5rem;
+        }
+
+    }
 }
 
 .additional-movie-info {
-    display: none;
-}
+    display:none;
+    height: 200%;
+    top: -100%;
 
+    h3 {
+        font-size: 2.6rem;
+        padding-top: 0;
+    }
+
+    .movie-rating {
+        font-weight: 700;
+        font-size: 2.3rem;
+        color: $accentFontColor;
+    }
+
+    .movie-release-date {
+        font-weight: 700;
+        font-size: 2.3rem;
+        margin-top: 0;
+    }
+
+    .movie-overview {
+        // text-overflow: ellipsis;
+        // /* Required for text-overflow to do anything */
+        // white-space: nowrap;
+        // overflow: hidden;
+        // -webkit-line-clamp: 7;
+        // -webkit-box-orient: vertical;
+    }
+
+
+}
 
 @media (min-width: 750px) {
     .result {
