--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -1,3 +1,31 @@
+.logo-wrapper {
+    // position: relative;
+    
+    
+    z-index: 10;
+    img {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 50px;
+        height: 50px;
+    }
+    h1 {
+        position: absolute;
+        top: 10px;
+        font-size: 3rem;
+        color: white;
+        left: -200px;
+        animation: logo 0.5s linear forwards 1.6s;
+        span {
+            font-family: $primaryFont;
+            font-weight: 400;
+            font-size: 2rem;
+            color: $buttonColor;
+        }
+    }
+}
+
 
 #heroVideo {
     position: absolute;
@@ -115,6 +143,15 @@
     }
 
 
+}
+
+@keyframes logo {
+    0% {
+        left: -200px;
+    }
+    100% {
+        left: 60px;
+    }
 }
 
 @keyframes header-right-start {
