--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -194,6 +194,28 @@ ul {
             animation: mainMenuButton 1.5s linear forwards 4.2s;
     top: 64%; }
 
+.logo-wrapper {
+  z-index: 10; }
+  .logo-wrapper img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 50px;
+    height: 50px; }
+  .logo-wrapper h1 {
+    position: absolute;
+    top: 10px;
+    font-size: 3rem;
+    color: white;
+    left: -200px;
+    -webkit-animation: logo 0.5s linear forwards 1.6s;
+            animation: logo 0.5s linear forwards 1.6s; }
+    .logo-wrapper h1 span {
+      font-family: "Playfair Display", serif;
+      font-weight: 400;
+      font-size: 2rem;
+      color: #ddab0a; }
+
 #heroVideo {
   position: absolute;
   right: 0;
@@ -307,6 +329,18 @@ ul {
     color: white;
     -webkit-animation: subheader .6s linear forwards 2.6s;
             animation: subheader .6s linear forwards 2.6s; }
+
+@-webkit-keyframes logo {
+  0% {
+    left: -200px; }
+  100% {
+    left: 60px; } }
+
+@keyframes logo {
+  0% {
+    left: -200px; }
+  100% {
+    left: 60px; } }
 
 @-webkit-keyframes header-right-start {
   0% {
@@ -811,9 +845,7 @@ input[type='radio'] {
     position: relative; }
     .result-title {
       height: 30px;
-      -webkit-box-pack: end;
-          -ms-flex-pack: end;
-              justify-content: flex-end; }
+      position: relative; }
   .section--results {
     height: 100vh;
     width: 100%;
@@ -836,15 +868,42 @@ input[type='radio'] {
             justify-content: center;
     width: 50%;
     padding-bottom: 50px; }
+    .result .another-movie,
+    .result .another-drink {
+      margin: 0 auto;
+      left: auto;
+      right: auto;
+      -webkit-transform: none;
+              transform: none; }
   .another-movie,
   .another-drink {
     bottom: 20px; }
   .results__image-container {
+    margin: 0 auto;
     position: relative;
     width: calc(100% - 60px);
     max-width: 400px;
-    height: calc(100% - 180px); }
+    height: calc(100% - 260px); }
     .results__image-container .drink-image,
     .results__image-container .movie-image {
       width: 100%;
-      height: 100%; } }
+      height: 100%; }
+  .movies-result__container,
+  .drinks-result__container {
+    margin: 0 auto; }
+    .movies-result__container .more-info,
+    .drinks-result__container .more-info {
+      left: 50%;
+      bottom: 35px;
+      top: auto;
+      margin: 0 auto; }
+    .movies-result__container h3,
+    .drinks-result__container h3 {
+      width: 100%;
+      position: relative;
+      margin: 40px 0;
+      font-size: 2.5rem; }
+  .additional-movie-info,
+  .additional-drink-info {
+    height: 100%;
+    top: 25px; } }
