--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -921,6 +921,8 @@ input[type='radio'] {
     font-weight: 700;
     font-size: 2.3rem;
     margin-top: 0; }
+  .additional-movie-info .movie-overview {
+    overflow: auto; }
 
 @media (min-width: 750px) {
   .result {
